--- a/pages/index.html
+++ b/pages/index.html
@@ -38,117 +38,49 @@
       <!-- active 추가시 depth2 활성화 -->
       <header id="header" class="">
         <div class="inner">
-          <h1 id="logo">
-            <a href="#">
-              <span>우리자산운용</span>
-            </a>
-          </h1>
-          <nav id="gnb" class="gnb">
-            <ul class="gnb__depth1">
-              <li>
-                <a href="#">
-                  <span>menu1</span>
+          <div class="h_wrap">
+            <div class="h_top">
+              <h1 class="logo">
+                <a href="/">
+                  <i class="ico">
+                    <span class="sr-only">tvN</span>
+                  </i>
                 </a>
-                <ul class="gnb__depth2">
-                  <li><a href="#">menu1-1</a></li>
-                  <li><a href="#">menu1-2</a></li>
-                  <li><a href="#">menu1-3</a></li>
-                  <li><a href="#">menu1-4</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="#"><span>menu2</span></a>
-                <ul class="gnb__depth2">
-                  <li><a href="#">menu2-1</a></li>
-                  <li><a href="#">menu2-2</a></li>
-                  <li><a href="#">menu2-3</a></li>
-                  <li><a href="#">menu2-4</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="#"><span>menu3</span></a>
-                <ul class="gnb__depth2">
-                  <li><a href="#">menu3-1</a></li>
-                  <li><a href="#">menu3-2</a></li>
-                  <li><a href="#">menu3-3</a></li>
-                  <li><a href="#">menu3-4</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="#"><span>menu4</span></a>
-                <ul class="gnb__depth2">
-                  <li><a href="#">menu4-1</a></li>
-                  <li><a href="#">menu4-2</a></li>
-                  <li><a href="#">menu4-3</a></li>
-                  <li><a href="#">menu4-4</a></li>
-                </ul>
-              </li>
-            </ul>
-          </nav>
-          <div class="util">
-            <!-- active 추가시 활성화 -->
-            <div class="lang">
-              <button class="lang__btn">kor</button>
-              <ul class="lang__lst">
-                <li>kor</li>
-                <li>eng</li>
+              </h1>
+              <a href="" class="btn-dropdown">전체메뉴</a>
+            </div>
+            <div id="navDev">
+              <ul class="navbar-dev">
+                <li class="menu-item">
+                  <a href="#"><span>About tvN</span></a>
+                </li>
+                <li class="menu-item">
+                  <a href="#"><span>편성표</span></a>
+                </li>
+                <li class="menu-item has-sub">
+                  <a href="#">드라마</a>
+                  <ul class="sub-menu">
+                    <li class="menu-item">[토일] 정년이</li>
+                    <li class="menu-item">[예정] 사랑은 외나무 다리에서</li>
+                    <li class="menu-item">[예정] 가석방 심사관 이한신</li>
+                  </ul>
+                </li>
+                <li class="menu-item has-sub">
+                  <a href="#">연예오락</a>
+                  <ul class="sub-menu">
+                    <li class="menu-item">[월] 문과vs이과, 놀라운 증명</li>
+                    <li class="menu-item">[화] 벌거벗은 세계사</li>
+                    <li class="menu-item">[수] 유 퀴즈 온 더 블럭</li>
+                    <li class="menu-item">[목] 텐트 밖은 유럽</li>
+                    <li class="menu-item">[금] 삼시세끼 Light</li>
+                    <li class="menu-item">[토] 놀라운 토요일</li>
+                    <li class="menu-item">[일] 백패커2</li>
+                  </ul>
+                </li>
               </ul>
             </div>
-            <button class="search">
-              <span class="blind">검색</span>
-            </button>
-            <button class="all-menu">
-              <span class="blind">전체메뉴</span>
-            </button>
           </div>
         </div>
-        <!-- active 추가시 활성화 -->
-        <nav id="nav-all" class="">
-          <ul class="gnb__depth1">
-            <li>
-              <a href="#">
-                <span>menu1</span>
-              </a>
-              <ul class="gnb__depth2">
-                <li><a href="#">menu1-1</a></li>
-                <li><a href="#">menu1-2</a></li>
-                <li><a href="#">menu1-3</a></li>
-                <li><a href="#">menu1-4</a></li>
-              </ul>
-            </li>
-            <li>
-              <a href="#"><span>menu2</span></a>
-              <ul class="gnb__depth2">
-                <li><a href="#">menu2-1</a></li>
-                <li><a href="#">menu2-2</a></li>
-                <li><a href="#">menu2-3</a></li>
-                <li><a href="#">menu2-4</a></li>
-              </ul>
-            </li>
-            <li>
-              <a href="#"><span>menu3</span></a>
-              <ul class="gnb__depth2">
-                <li><a href="#">menu3-1</a></li>
-                <li><a href="#">menu3-2</a></li>
-                <li><a href="#">menu3-3</a></li>
-                <li><a href="#">menu3-4</a></li>
-              </ul>
-            </li>
-            <li>
-              <a href="#"><span>menu4</span></a>
-              <ul class="gnb__depth2">
-                <li><a href="#">menu4-1</a></li>
-                <li><a href="#">menu4-2</a></li>
-                <li><a href="#">menu4-3</a></li>
-                <li><a href="#">menu4-4</a></li>
-              </ul>
-            </li>
-          </ul>
-
-          <button class="close">
-            <span class="">전체메뉴 닫기</span>
-          </button>
-        </nav>
       </header>
       <div class="slide">
         <!-- Slider main container -->
@@ -776,7 +708,7 @@
               <div class="f-logo">
                 <h1 id="logo">
                   <a href="#">
-                    <span>우리자산운용</span>
+                    <span>tvN</span>
                   </a>
                 </h1>
               </div>
